test/src/e2e_vm_tests/test_programs/should_pass/test_abis/array_of_structs_abi/src/main.sw
library array_of_structs_abi;

pub struct Id {
    number: u64,
}

pub struct Wrapper {
    id: Id,
}

abi TestContract {
    fn return_array_of_structs(param: [Wrapper; 2]) -> [Wrapper; 2];
}
