test/src/e2e_vm_tests/test_programs/should_fail/encode_append_wrong_args/src/main.sw
library;

pub struct Buffer {
    buffer: u64
}

pub trait T {
    fn ar(buffer: Buffer) -> Buffer;
}

impl T for str[10] {
    fn ar(buffer: Buffer) -> Buffer {
        Buffer {
            buffer: __encode_buffer_append(buffer.buffer)
        }
    }
}